@@ -885,7 +885,7 @@ const struct rt_functab rt_functab[] = {
 	rt_generic_form,
 	NULL,
 	rt_epa_params,
-	NULL
+	rt_epa_bbox
     },
 
     {
